Added category scaffold, spec
