# app/controllers/categories_controller.rb
@@ -1,5 +1,9 @@
 class CategoriesController < ApplicationController
+  before_action :authorize_request
   before_action :set_category, only: [:show, :update, :destroy]
+  before_action only: [:edit, :update, :destroy] do
+    is_owner_object @category ##your object
+  end
 
   # GET /categories
   def index
@@ -46,6 +50,6 @@ class CategoriesController < ApplicationController
 
     # Only allow a trusted parameter "white list" through.
     def category_params
-      params.require(:category).permit(:title, :body, :user_id, :published)
+      params.require(:category).permit(:title, :body).merge(user_id: @current_user.id)
     end
 end
