# swagger/v1/swagger.yaml
@@ -39,6 +39,151 @@ paths:
           description: Ok
         '401':
           description: Unauthorized
+  "/categories":
+    get:
+      summary: list categories
+      tags:
+      - Category
+      security:
+      - Bearer: []
+      consumes:
+      - application/json
+      parameters:
+      - name: Authorization
+        in: header
+        type: string
+        description: JWT token for Authorization
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: Successful
+        '401':
+          description: Unauthorized
+    post:
+      summary: create category
+      tags:
+      - Category
+      security:
+      - Bearer: []
+      consumes:
+      - application/json
+      parameters:
+      - name: Authorization
+        in: header
+        type: string
+        description: JWT token for Authorization
+      - name: body
+        in: body
+        required: true
+        schema:
+          type: object
+          properties:
+            category:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+      produces:
+      - application/json
+      responses:
+        '201':
+          description: Successful
+        '401':
+          description: Unauthorized
+        '422':
+          description: Unprocessable Entity
+  "/categories/{id}":
+    get:
+      summary: show category
+      tags:
+      - Category
+      security:
+      - Bearer: []
+      consumes:
+      - application/json
+      parameters:
+      - name: Authorization
+        in: header
+        type: string
+        description: JWT token for Authorization
+      - name: id
+        in: path
+        type: string
+        description: id
+        required: true
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: Successful
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+    put:
+      summary: update category
+      tags:
+      - Category
+      security:
+      - Bearer: []
+      consumes:
+      - application/json
+      parameters:
+      - name: Authorization
+        in: header
+        type: string
+        description: JWT token for Authorization
+      - name: id
+        in: path
+        type: string
+        description: id
+        required: true
+      - name: body
+        in: body
+        required: true
+        schema:
+          type: object
+          properties:
+            category:
+              type: object
+              properties:
+                body:
+                  type: string
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: Successful
+        '403':
+          description: Forbidden Unathorized
+    delete:
+      summary: delete category
+      tags:
+      - Category
+      security:
+      - Bearer: []
+      consumes:
+      - application/json
+      parameters:
+      - name: Authorization
+        in: header
+        type: string
+        description: JWT token for Authorization
+      - name: id
+        in: path
+        type: string
+        description: id
+        required: true
+      produces:
+      - application/json
+      responses:
+        '204':
+          description: Successful
+        '403':
+          description: Forbidden Unathorized
   "/comments":
     get:
       summary: list comments
@@ -204,6 +349,11 @@ paths:
         in: header
         type: string
         description: JWT token for Authorization
+      - name: category_id
+        in: query
+        type: int
+        default: '1'
+        description: Category Id
       - name: page
         in: query
         type: int
@@ -248,6 +398,8 @@ paths:
               properties:
                 body:
                   type: string
+                category_id:
+                  type: int
       produces:
       - application/json
       responses:
